기능 : VideoService 시청 및 중단