@@ -2,9 +2,11 @@ package com.sparta.outcome.security;
 
 import com.sparta.outcome.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class UserDetailsImpl implements UserDetails {
@@ -21,7 +23,9 @@ public class UserDetailsImpl implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+//        return List.of();
+//        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.isRole()));
+        return null;
     }
 
     @Override
